Register Component of Route category changed fixed transparent border color of input fields when switched to dark mode theme

--- a/src/style/register.module.css
+++ b/src/style/register.module.css
@@ -12,20 +12,6 @@
   src: url('../fonts/APOLLO.otf');
 }
 
-.wrapper {
-  width: 100%;
-  height: 100vh;
-  background: rgb(5, 0, 36);
-  background: linear-gradient(
-    -120deg,
-    rgb(3, 28, 65) 0%,
-    rgba(89, 110, 133, 1) 50%,
-    rgba(0, 30, 60, 1) 100%
-  );
-  /* background-image: url('../assets/space-stars.jpg'); */
-  background-size: cover;
-}
-
 .heading {
   font-family: space;
   letter-spacing: 8px;
